# submarine-returns-rs

./: .gitignore  Cargo.toml  README.md  com.sudeium.submarine-returns.plist
.cargo/: config.toml
src/: main.rs
