[package]
name = "sub-returns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.30", features = ["serde"] }
chrono-tz = { version = "0.8.5", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive"] }
directories = "5.0.1"
iana-time-zone = "0.1.59"
notify-rust = "4.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
